# pymangaj

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
pymanga/: pymanga.py
pymanga/sources/: mangalivre.py  muitomanga.py
pymangaj/: __init__.py  chapmanganato.py  lermanga.py  mangalivre.py  muitomanga.py  pymangaj.py
test/: chapmanganato_test.py  mangalivre_test.py  muitomanga_test.py  pymangaj_test.py
