[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pymangaj"
version = "0.1.7"
description = "Search and download mangas."
authors = [
    {name = "Jean Jacques Barros", email = "jjean.jacques10@gmail.com"},
]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    'Development Status :: 3 - Alpha',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
requires-python = ">=3.6"
dependencies = [
    "requests == 2.28.1",
    "beautifulsoup4 == 4.12.2",
]

[project.optional-dependencies]
test = [
    "pytest"
]

[project.urls]
homepage = "https://pypi.org/project/pymangaj/"
documentation = "https://github.com/jjeanjacques10/pymangaj"
repository = "https://github.com/jjeanjacques10/pymangaj"